feat: CRUD Supplier for MySQL
